force-app/main/default/objects/WBS__c/WBS__c.object-meta.xml
<CustomObject>
    <label>WBS</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{00}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WBS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>