force-app/main/default/objects/WBS__c/fields/Date_Time_of_Last_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Last_Status_Update__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date and time the WBS Status was most recently changed. Defaults to the current time when created.</description>
    <label>Date/Time of Last Status Update</label>
    <type>DateTime</type>
</CustomField>