force-app/main/default/objects/WBS__c/fields/I_RS_Account_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Account_Code_Name__c</fullName>
    <description>This is a code generated by finance. It is generally made up of the chief investigators name the fund scheme name and the years of the project

 Example &quot;HGibb EQUITY TUS 18/19&quot;</description>
    <label>Account Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>