force-app/main/default/objects/WBS__c/fields/I_RS_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cost_Centre__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_Cost_Centre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Centre</label>
    <type>Text</type>
</CustomField>