force-app/main/default/objects/WBS__c/fields/I_RS_Finance_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Finance_SAP_Customer_Number__c</fullName>
    <description>This is the SAP customer number stored in SFin.  This filed has been added to allow us to identify discrepancies in both systems.</description>
    <label>Finance SAP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>