force-app/main/default/objects/WBS__c/fields/I_RS_Funding_Body__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Body__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference of Funding body in PRIME for the WBS</description>
    <label>Funding Body</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WBS</relationshipLabel>
    <relationshipName>WBS_s</relationshipName>
    <type>Lookup</type>
</CustomField>