force-app/main/default/objects/WBS__c/fields/I_RS_Funding_Body_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Body_Name__c</fullName>
    <formula>I_RS_Funding_Body__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Body Name</label>
    <type>Text</type>
</CustomField>