force-app/main/default/objects/WBS__c/fields/I_RS_Has_been_marked_as_created__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Has_been_marked_as_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this WBS has been marked as Created in Finance at some point in history</description>
    <label>Has been marked as Created</label>
    <type>Checkbox</type>
</CustomField>