force-app/main/default/objects/WBS__c/fields/I_RS_Has_been_marked_as_Error__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Has_been_marked_as_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this WBS has failed to integrate with Finance at some point in history</description>
    <label>Has been marked as Error</label>
    <type>Checkbox</type>
</CustomField>