force-app/main/default/objects/WBS__c/fields/I_RS_HERDC_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HERDC_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HERDC Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HERDC_Category__c.I_RS_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HERDC_Category__c</referenceTo>
    <relationshipLabel>WBS</relationshipLabel>
    <relationshipName>WBS</relationshipName>
    <type>Lookup</type>
</CustomField>