force-app/main/default/objects/WBS__c/fields/I_RS_Integration_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Integration_Code__c</fullName>
    <description>Integration failure reason updated from Finance/Middleware</description>
    <label>Integration Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>