force-app/main/default/objects/WBS__c/fields/I_RS_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Integration_Message__c</fullName>
    <description>Integration failure reason update from Finance/Middleware</description>
    <label>Integration Message</label>
    <type>TextArea</type>
</CustomField>