force-app/main/default/objects/WBS__c/fields/I_RS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Finance</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Request Sent to Finance</fullName>
                <isActive>false</isActive>
                <label>Request Sent to Finance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>