force-app/main/default/objects/WBS__c/fields/I_RS_Internal_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Internal_Record_URL__c</fullName>
    <formula>$Setup.URL_Variable__c.I_RS_Internal_Base_URL__c 
+ &quot;/&quot; +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Record URL</label>
    <type>Text</type>
</CustomField>