force-app/main/default/objects/WBS__c/fields/I_RS_Junction_Linkage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Junction_Linkage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Detail</label>
    <referenceTo>Junction_Linkage__c</referenceTo>
    <relationshipLabel>WBS</relationshipLabel>
    <relationshipName>WBS</relationshipName>
    <type>Lookup</type>
</CustomField>