force-app/main/default/objects/WBS__c/fields/I_RS_Lead_Chief_Investigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Lead CI and they must be an internal Staff member</description>
    <label>Lead Chief Investigator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WBS</relationshipLabel>
    <relationshipName>WBS_s</relationshipName>
    <type>Lookup</type>
</CustomField>