force-app/main/default/objects/WBS__c/fields/I_RS_Lead_Chief_Investigator_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator_First_Name__c</fullName>
    <formula>I_RS_Lead_Chief_Investigator__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Chief Investigator First Name</label>
    <type>Text</type>
</CustomField>