force-app/main/default/objects/WBS__c/fields/I_RS_Lead_Chief_Investigator_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator_Last_Name__c</fullName>
    <formula>I_RS_Lead_Chief_Investigator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Chief Investigator Last Name</label>
    <type>Text</type>
</CustomField>