force-app/main/default/objects/WBS__c/fields/I_RS_Lead_Chief_Investigator_Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator_Staff_Id__c</fullName>
    <description>Staff Id of the Lead Chief Investigator</description>
    <formula>I_RS_Lead_Chief_Investigator__r.I_RS_Staff_ID__c</formula>
    <inlineHelpText>Staff Id of the Lead Chief Investigator</inlineHelpText>
    <label>Lead Chief Investigator Staff Id</label>
    <type>Text</type>
</CustomField>