force-app/main/default/objects/WBS__c/fields/I_RS_Person_Responsible__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Person_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person responsible for the WBS (updated from finance)</description>
    <inlineHelpText>Person responsible for the WBS</inlineHelpText>
    <label>Person Responsible</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WBS (Person Responsible)</relationshipLabel>
    <relationshipName>WBS</relationshipName>
    <type>Lookup</type>
</CustomField>