force-app/main/default/objects/WBS__c/fields/I_RS_Person_Responsible_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Person_Responsible_Staff_ID__c</fullName>
    <description>New person responsible for the WBS (response from Finance)</description>
    <label>Person Responsible Staff Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>