force-app/main/default/objects/WBS__c/fields/I_RS_PRIME_Portal_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_PRIME_Portal_Record_URL__c</fullName>
    <formula>$Setup.URL_Variable__c.I_RS_Researcher_Portal_Base_URL__c + &quot;/detail/&quot; +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRIME Portal Record URL</label>
    <type>Text</type>
</CustomField>