force-app/main/default/objects/WBS__c/fields/I_RS_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal__c</fullName>
    <description>One project can have many WBS but each WBS can have only one project</description>
    <label>Project</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>WBS</relationshipLabel>
    <relationshipName>WBS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>