force-app/main/default/objects/WBS__c/fields/I_RS_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reference_Id__c</fullName>
    <description>Reference Id - Research Master WBS Id or Salesforce Id. For new records in Salesforce it will be Salesforce Id else RM Id.</description>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>