force-app/main/default/objects/WBS__c/fields/I_RS_Research_Office_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Office_Contact_First_Name__c</fullName>
    <formula>I_RS_Research_Office_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Office Contact First Name</label>
    <type>Text</type>
</CustomField>