force-app/main/default/objects/WBS__c/fields/I_RS_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_Customer_Number__c</fullName>
    <formula>I_RS_Funding_Body__r.I_RS_SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Customer Number</label>
    <type>Text</type>
</CustomField>