force-app/main/default/objects/WBS__c/fields/I_RS_Source__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>