force-app/main/default/objects/WBS__c/fields/I_RS_TRIM_File_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_TRIM_File_Number__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_TRIM_File_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRIM File Number</label>
    <type>Text</type>
</CustomField>