force-app/main/default/objects/WBS__c/fields/I_RS_WBS_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_WBS_Code__c</fullName>
    <description>WBS code generated from Finance and reflected in PRIME</description>
    <externalId>true</externalId>
    <label>WBS Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>