force-app/main/default/objects/WBS__c/fields/I_RS_WBS_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_WBS_Name__c</fullName>
    <description>WBS name to be updated by Finance</description>
    <inlineHelpText>WBS name to be updated by Finance</inlineHelpText>
    <label>WBS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>