force-app/main/default/objects/WBS__c/fields/I_RS_WBS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_WBS_Status__c</fullName>
    <label>WBS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Request To Finance</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Not Synced with Finance</fullName>
                <isActive>false</isActive>
                <label>Not Synced with Finance</label>
            </value>
            <value>
                <fullName>Request Sent To Finance</fullName>
                <isActive>false</isActive>
                <label>Request Sent To Finance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>