force-app/main/default/objects/WBS__c/recordTypes/Deafult.recordType-meta.xml
<RecordType>
    <fullName>Deafult</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>