force-app/main/default/objects/WBS__c/validationRules/HERDC_Category_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>HERDC_Category_is_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( I_RS_WBS_Status__c , &apos;Draft&apos;)),
OR(
ISPICKVAL( I_RS_Integration_Status__c, &apos;Ready for Finance&apos;), 
ISPICKVAL( I_RS_WBS_Status__c, &apos;Request To Finance&apos;) 
),
ISBLANK(  I_RS_HERDC_Category__c),
NOT(I_RS_Project_Proposal__r.I_RS_Turn_off_Validations__c)
)</errorConditionFormula>
    <errorMessage>Please ensure the HERDC Category is selected.</errorMessage>
</ValidationRule>