force-app/main/default/objects/WBS__c/validationRules/Profile_Check_for_WBS_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Profile_Check_for_WBS_Status</fullName>
    <active>true</active>
    <description>Only Integration user can change WBS status to Open or Closed</description>
    <errorConditionFormula>AND(

AND (

ISCHANGED(I_RS_WBS_Status__c ),

OR(
ISPICKVAL( PRIORVALUE(I_RS_WBS_Status__c) , &quot;Open&quot;),
ISPICKVAL( PRIORVALUE(I_RS_WBS_Status__c) , &quot;Closed&quot;),
ISPICKVAL( I_RS_WBS_Status__c, &quot;Open&quot;),
ISPICKVAL( I_RS_WBS_Status__c, &quot;Closed&quot;)
)

),

AND(
NOT($Profile.Name = &quot;LTU Integration&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;)
)
)</errorConditionFormula>
    <errorMessage>You do not have permission to change WBS status to &quot;Open&quot; or &quot;Closed&quot;</errorMessage>
</ValidationRule>