force-app/main/default/objects/WBS__c/validationRules/Project_Cost_Center_Code_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Cost_Center_Code_is_not_blank</fullName>
    <active>true</active>
    <description>Validation to check the project has a Cost Center Code</description>
    <errorConditionFormula>AND (
NOT(ISPICKVAL( I_RS_WBS_Status__c , &apos;Draft&apos;)), 
OR(
ISPICKVAL( I_RS_Integration_Status__c, &apos;Ready for Finance&apos;), 
ISPICKVAL( I_RS_WBS_Status__c, &apos;Request To Finance&apos;) 
),
ISBLANK( I_RS_Project_Proposal__r.I_RS_Cost_Centre__c ),
NOT(I_RS_Project_Proposal__r.I_RS_Turn_off_Validations__c)
)</errorConditionFormula>
    <errorMessage>Please ensure the project has a Cost Center</errorMessage>
</ValidationRule>