force-app/main/default/objects/WBS__c/validationRules/Project_End_Date_is_not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_End_Date_is_not_Blank</fullName>
    <active>true</active>
    <description>Validation to check the project has a end date</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( I_RS_WBS_Status__c , &apos;Draft&apos;)),
OR(
ISPICKVAL( I_RS_Integration_Status__c, &apos;Ready for Finance&apos;), 
ISPICKVAL( I_RS_WBS_Status__c, &apos;Request To Finance&apos;) 
),
ISBLANK(I_RS_Project_Proposal__r.I_RS_Project_End_Date__c),
NOT(I_RS_Project_Proposal__r.I_RS_Turn_off_Validations__c)
)</errorConditionFormula>
    <errorMessage>Please ensure the project has an End Date</errorMessage>
</ValidationRule>