force-app/main/default/objects/WBS__c/validationRules/WBS_has_LCI.validationRule-meta.xml
<ValidationRule>
    <fullName>WBS_has_LCI</fullName>
    <active>true</active>
    <description>Validation to ensure WBS has LCI</description>
    <errorConditionFormula>NOT(ISPICKVAL( I_RS_WBS_Status__c , &apos;Draft&apos;)) &amp;&amp; ISBLANK( I_RS_Lead_Chief_Investigator__c )</errorConditionFormula>
    <errorMessage>Please ensure the WBS has Lead Chief Investigator</errorMessage>
</ValidationRule>