force-app/main/default/objects/WBS__c/listViews/All_WBS.listView-meta.xml
<ListView>
    <fullName>All_WBS</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All WBS</label>
</ListView>